[package]
name = "riscv-emulator"
version = "1.0.0"
edition = "2021"

# ── Native binary (CLI) ───────────────────────────────────────────────────────
[[bin]]
name = "riscv-emulator"
path = "src/main.rs"

# ── Library (used by WASM and the binary) ─────────────────────────────────────
[lib]
name = "riscv_emulator"
path = "src/lib.rs"
# cdylib → .wasm for the browser
# rlib   → linked by the native binary
crate-type = ["cdylib", "rlib"]

# ── Common dependencies ───────────────────────────────────────────────────────
[dependencies]
clap = { version = "4", features = ["derive"] }

# ── Native dependencies (do not compile to WASM) ──────────────────────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_System_Console",
] }

# ── WASM dependencies ─────────────────────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Performance", "Window"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"

# ── Profiles ──────────────────────────────────────────────────────────────────
[profile.release]
opt-level = 3